--- a/runtimes/7.4/php.ini
+++ b/runtimes/7.4/php.ini
@@ -2,3 +2,7 @@
 post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
+
+xdebug.mode=debug
+xdebug.client_port=9003
+xdebug.discover_client_host=1
